--- a/portfolio_sameer/portfolio_sameer/css/style.css
+++ b/portfolio_sameer/portfolio_sameer/css/style.css
@@ -248,7 +248,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 120px 0 0 0;
     overflow: hidden;
-    background: linear-gradient(rgba(239, 35, 60, .95), rgba(239, 35, 60, .95)), url(../img/hero-bg.jpg);
+    background: linear-gradient(rgba(239, 35, 60, .95), rgba(239, 35, 60, .95)), url(../img/sameer_jack_pic-removebg1.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -261,13 +261,13 @@ a:focus {
 .hero .hero-image {
     position: relative;
     text-align: right;
-    padding-right: 75px;
+    padding-right: 100px;
 }
 
-.hero .hero-image img {
+/* .hero .hero-image img {
     max-width: 80%;
     max-height: 80%;
-}
+} */
 
 .hero .hero-content {
     position: relative;
@@ -474,7 +474,7 @@ a:focus {
 .about {
     position: relative;
     width: 100%;
-    margin: -45px 0 45px 0;
+    margin: -18px 0 45px 0;
 }
 
 .about .col-lg-6 {
@@ -492,8 +492,8 @@ a:focus {
 
 .about .about-img img {
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
 }
 
@@ -1305,7 +1305,7 @@ a:focus {
 .contact {
     position: relative;
     width: 100%;
-    margin: 45px 0;
+    margin: -47px 0;
     background: #EF233C;
 }
 
